--- a/app/src/main/res/layout/activity_loginpage.xml
+++ b/app/src/main/res/layout/activity_loginpage.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     tools:context=".loginpage"
     android:background="@drawable/screen"
-    android:padding="40dp"
+    android:padding="44dp"
 
     android:orientation="vertical">
 
@@ -16,6 +16,7 @@
         android:layout_height="wrap_content"
         android:textStyle="bold"
         android:textSize="25dp"
+        android:layout_marginTop="10dp"
         android:textColor="@color/white"
         android:text="Welcome Back"/>
 
@@ -25,13 +26,14 @@
         android:layout_height="wrap_content"
         android:textStyle="bold"
         android:textSize="50dp"
+        android:layout_marginTop="30dp"
         android:textColor="@color/white"
         android:text="Log In"/>
 
     <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="150dp"
+        android:layout_marginTop="230dp"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
         
         
@@ -47,21 +49,53 @@
     <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        
+        android:layout_marginTop="40dp"
+        app:passwordToggleEnabled="true"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
 
 
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Email Address"
-            android:inputType="textEmailAddress"/>
+            android:hint="Password"
+            android:inputType="textPassword"/>
 
     </com.google.android.material.textfield.TextInputLayout>
 
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="78dp"
+        android:layout_marginTop="200dp"
+        android:text="Sign In"
+        android:textSize="20dp"
+        android:background="@drawable/round_btn"
+        android:textStyle="bold" />
+
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="horizontal"
+    android:layout_marginTop="20dp"
+    android:gravity="center">
 
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Don't Have an account ?"
+        android:textSize="18dp"
+        android:textStyle="bold"/>
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Sign Up"
+        android:textSize="18dp"
+        android:textColor="@color/blue"
+        android:layout_marginLeft="10dp"
+        android:textStyle="bold"/>
+
+
+</LinearLayout>
 
 </LinearLayout>
