--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -5,7 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".loginpage"
+    tools:context=".signup"
     android:background="@drawable/screen"
     android:padding="44dp"
 
@@ -18,7 +18,7 @@
         android:textSize="25dp"
         android:layout_marginTop="10dp"
         android:textColor="@color/white"
-        android:text="Welcome Back"/>
+        android:text="Hello !"/>
 
 
     <TextView
@@ -28,17 +28,16 @@
         android:textSize="50dp"
         android:layout_marginTop="30dp"
         android:textColor="@color/white"
-        android:text="Log In"/>
+        android:text="Sign Up"/>
 
     <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="230dp"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
-        
-        
+
+
         <com.google.android.material.textfield.TextInputEditText
-           android:id="@+id/email"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Email Address"
@@ -56,7 +55,6 @@
 
 
         <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/password"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Password"
@@ -65,41 +63,39 @@
     </com.google.android.material.textfield.TextInputLayout>
 
     <Button
-        android:id="@+id/signinbtn"
         android:layout_width="match_parent"
         android:layout_height="78dp"
         android:layout_marginTop="200dp"
-        android:text="Sign In"
+        android:text="Sign Up"
         android:textSize="20dp"
         android:background="@drawable/round_btn"
         android:textStyle="bold" />
 
-<LinearLayout
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="horizontal"
-    android:layout_marginTop="20dp"
-    android:gravity="center">
-
-
-    <TextView
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Don't Have an account ?"
-        android:textSize="18dp"
-        android:textStyle="bold"/>
-
-    <TextView
-        android:id="@+id/signuptxt"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Sign Up"
-        android:textSize="18dp"
-        android:textColor="@color/blue"
-        android:layout_marginLeft="10dp"
-        android:textStyle="bold"/>
+        android:orientation="horizontal"
+        android:layout_marginTop="20dp"
+        android:gravity="center">
 
 
-</LinearLayout>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Already Have an account ?"
+            android:textSize="18dp"
+            android:textStyle="bold"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Sign In"
+            android:textSize="18dp"
+            android:textColor="@color/blue"
+            android:layout_marginLeft="10dp"
+            android:textStyle="bold"/>
+
+
+    </LinearLayout>
 
 </LinearLayout>
