--- a/app/src/main/res/layout/activity_loginpage.xml
+++ b/app/src/main/res/layout/activity_loginpage.xml
@@ -33,7 +33,7 @@
     <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="230dp"
+        android:layout_marginTop="180dp"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
         
         
@@ -42,6 +42,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Email Address"
+            android:textColor="@color/black"
             android:inputType="textEmailAddress"/>
 
     </com.google.android.material.textfield.TextInputLayout>
@@ -60,6 +61,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Password"
+            android:textColor="@color/black"
             android:inputType="textPassword"/>
 
     </com.google.android.material.textfield.TextInputLayout>
@@ -67,11 +69,11 @@
     <Button
         android:id="@+id/signinbtn"
         android:layout_width="match_parent"
-        android:layout_height="78dp"
-        android:layout_marginTop="200dp"
+        android:layout_height="64dp"
+        android:layout_marginTop="140dp"
+        android:background="@drawable/round_btn"
         android:text="Sign In"
         android:textSize="20dp"
-        android:background="@drawable/round_btn"
         android:textStyle="bold" />
 
 <LinearLayout
